corrects styling on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   background-color: #1f212c;
   color: white;
+  justify-content: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -32,7 +33,7 @@ code {
 #LeagueCard-avatar {
   border-radius: 20px;
   width: 100px;
-  length: 100px;
+  height: 100px;
 }
 
 #TeamCard-avatar {
@@ -77,6 +78,7 @@ code {
   justify-content: center !important;
   flex-direction: row;
   flex-wrap: wrap;
+  flex-shrink: 1;
 }
 
 #RosterCard-card {
@@ -101,8 +103,9 @@ code {
   display: flex;
   flex-direction: column !;
   align-content: center !important;
-  margin-left: 80px;
-  margin-right: 80px;
+  justify-content: center !important;
+  align-items: center !important;
+  flex-basis: 500px;
 }
 
 .MuiButtonBase-root {
@@ -158,3 +161,26 @@ input {
 .MuiCard-root {
   overflow: visible !important;
 } 
+
+@media screen and (max-width: 490px) {
+
+  #logo {
+    width: 400px;
+    height: 103px;
+  }
+
+  #LeagueCard-accordion {
+    width: 400px;
+  }
+
+  .TeamCard-container {
+    display: flex;
+    flex-direction: column !;
+    align-content: center !important;
+    flex-basis: 420px;
+    margin-left: 0px;
+    margin-right: 0px;
+    
+  }
+
+}
